Bug 38410 - FILEOPEN FORMATTING background image has faded colours
Summary: FILEOPEN FORMATTING background image has faded colours
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Luboš Luňák
URL:
Whiteboard: Confirmed:4.2.0.1:OSX target:4.3.0 ta...
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-17 07:49 UTC by Andras Timar
Modified: 2020-04-14 15:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
DOC with background image (56.50 KB, application/msword)
2011-06-17 07:49 UTC, Andras Timar
Details
the same document, saved as PDF using msWord 2007 (174.34 KB, application/pdf)
2012-09-18 09:15 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2011-06-17 07:49:08 UTC
Created attachment 48103 [details]
DOC with background image

There are two background images in the attached document. In LibreOffice the background images are so faint that they are hardly noticeable.
Comment 1 Björn Michaelsen 2011-12-23 12:26:48 UTC Comment hidden (spam)
Comment 2 Florian Reisinger 2012-08-14 14:02:09 UTC Comment hidden (spam)
Comment 3 Florian Reisinger 2012-08-14 14:03:09 UTC Comment hidden (obsolete, spam)
Comment 4 Florian Reisinger 2012-08-14 14:07:43 UTC Comment hidden (obsolete, spam)
Comment 5 Florian Reisinger 2012-08-14 14:09:49 UTC Comment hidden (obsolete, spam)
Comment 6 sasha.libreoffice 2012-09-18 09:15:00 UTC
Created attachment 67317 [details]
the same document, saved as PDF using msWord 2007
Comment 7 sasha.libreoffice 2012-09-18 09:18:08 UTC
Reproduced in 3.3.4 and 3.6.1 on Fedora 64 bit
Background picture almost not seen. Some problem with formatting. Animation of first line looks different than in Word.
(Attached pdf contains ? instead of some character. It is Word's fault)
Comment 8 retired 2014-01-04 10:23:22 UTC
Confirmed:4.2.0.1:OSX just verifying this is still valid.
Comment 9 Andras Timar 2014-01-06 08:48:41 UTC
Brigtness and Contast of the background image are 82% and 18% in the original Word document, respectively on a 0-100% scale. In LibreOffice we have 64% and -64% but on a -100% - 100% scale, which looks like a correct conversion. However, the actual result looks different.
Comment 10 Commit Notification 2014-04-18 18:53:34 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1139d618b8bc6ab823a96184bd0f0257980aad24

handle strange brightness+contrast adjustment from msoffice (fdo#38410)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 sasha.libreoffice 2014-04-19 06:09:05 UTC
Much thanks for fixing this bug
Comment 12 Commit Notification 2014-04-19 13:08:41 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=85e088c70aa3cfdd638276a2555b35ed1275c352&h=libreoffice-4-2

handle strange brightness+contrast adjustment from msoffice (fdo#38410)


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.